--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -8,6 +8,15 @@
 
 html {
 	height: 100%;
+	color-scheme: light dark;
+}
+
+.theme-light {
+	color-scheme: light;
+}
+
+.theme-dark {
+	color-scheme: dark;
 }
 
 body {
